[package]
name = "testcallhome"
description ="call home"
version = "0.1.0"
edition = "2021"
authors = ["vivek.kumar@datacore.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
futures = "0.3.21"
tokio = { version = "1.14.0", features = ["full"] }
clap = { version = "3.2.16", default-features = false, features = ["std", "cargo", "derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
sha256 = "1.0.3"
jsonpath_lib = "0.3.0"
reqwest-retry = "0.1.5"
reqwest-middleware = "0.1.6"
url = "2.2.2"
env_logger = "0.9.0"
log = "0.4.17"
snafu = "0.7.1"
anyhow = "1.0.60"
tracing = "0.1.36"